fix(sidebar): update text capitalization for home tab and adjust font size for better readability

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -152,7 +152,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
         }
 
         span {
-          font-size: 90%;
+          font-size: 105%;
           letter-spacing: 0.2px;
         }
       }
